[tool.poetry]
name = "lm"
version = "0.1.0"
description = ""
authors = ["cyanic-selkie <cyanic-selkie@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
transformers = "^4.27.4"
datasets = "^2.11.0"
evaluate = "^0.4.0"
numpy = "^1.24.2"
clearml = "^1.10.3"
pyarrow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
