[tool.poetry]
name = "combiner"
version = "0.1.0"
description = ""
authors = ["cyanic-selkie <cyanic-selkie@protonmail.com>"]
readme = "README.md"
packages = [{include = "combiner"}]

[tool.poetry.dependencies]
python = "^3.10"
h5py = "^3.8.0"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
