[package]
name = "prepare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2 = { version = "0.17.0", features = ["io_parquet_zstd", "io_parquet"] }
clap = { version = "4.2.1", features = ["derive"] }
hdf5 = "0.8.1"
hdf5-sys = { version = "0.8.1", features = ["static"] }
itertools = "0.10.5"
ndarray = "0.15.6"
rand = "0.8.5"
rayon = "1.7.0"
